--- a/index.css
+++ b/index.css
@@ -70,10 +70,95 @@ nav ul li a:hover::after{
     font-weight: 1000;
     color: #ff004f;
 }
-.header-text2 img{
+.header-text2 {
     width: 455px;
     height: 270px;
     margin-top: 10%;
+    .menu {
+        position: relative;
+        width: 260px;
+        height: 260px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .menu li {
+        position: absolute;
+        left: 0;
+        list-style: none;
+        transform: rotate(0deg) translateX(100px);
+        transform-origin: 130px;
+        transition: 0.5s;
+        transition-delay: calc(0.1s * var(--i));
+      }
+      .menu.active li {
+        transform: rotate(calc(360deg / 8 * var(--i)));
+      }
+      .menu a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 60px;
+        height: 60px;
+        text-decoration: none;
+        font-size: 22px;
+        border-radius: 50%;
+        transform: rotate(calc(360deg / -8 * var(--i)));
+        transition: 1s;
+        color: transparent;
+        transition-delay: 0.5s;
+        filter: drop-shadow(0 0 2px var(--clr));
+      }
+      .menu.active a {
+        color: var(--clr);
+      }
+      .menu a::before {
+        content: "";
+        position: absolute;
+        width: 20px;
+        height: 2px;
+        border-radius: 2px;
+        background: var(--clr);
+        transform: rotate(calc(90deg * var(--i))) translate(0, 25px);
+        transition: width 0.5s, height 0.5s, transform 0.5s;
+        transition-delay: 0.5s, 1s, 1.5s;
+      }
+      .menu.active a::before {
+        width: 50px;
+        height: 50px;
+        background: #161616;
+        border: 2px solid var(--clr);
+        transform: rotate(calc(0 * var(--i)));
+        transition: transform 0.5s, height 0.5s, width 0.5s;
+        transition-delay: 0.5s, 1.5s, 1.5s;
+        border-radius: 10px;
+        filter: drop-shadow(0 0 5px var(--clr));
+        rotate: 135deg;
+      }
+      .menu.active li:hover a::before {
+        background: var(--clr);
+      }
+      .menu.active li:hover a ion-icon {
+        color: #161616;
+      }
+      
+      .menuToggle {
+        position: absolute;
+        width: 60px;
+        height: 60px;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 100;
+        border-radius: 50%;
+        cursor: pointer;
+        font-size: 32px;
+        transition: 1.5s;
+      }
+      .menu.active .menuToggle {
+        transform: rotate(315deg);
+      }
 }
 .header{
     display: flex;
@@ -386,13 +471,24 @@ nav .fa-solid{
 @media only screen and (max-width: 600px){
     #header{
         width: 100%;
-    height: 100vh;
-    background: #080808;
+        height: 100vh;
+        background: #080808;
     }
+    
     .header-text{
         margin-top: 30%;
         font-size: 16px;
         text-align: center;
+    }
+    ul.menu{
+        width: 335px;
+        height: 335px;
+        text-align: center;
+        align-items: center;
+    }
+    #about{
+        margin-top: 350px;
+        padding: 0 0 0 0 ;
     }
     .header-text h1{
         font-size: 30px;
