--- a/index.css
+++ b/index.css
@@ -63,7 +63,7 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text{
-    width: 100%;
+    width: 90%;
     margin-top: 0%;
     font-size: 12px;
 }
@@ -207,7 +207,7 @@ h2 span{
 
 /* -------------------------------------------------------------about-------------------------------------------------- */
 #about{
-    padding: 100px 0;
+    padding: 0 0;
     color: #ababab;
 }
 .row{
@@ -386,10 +386,8 @@ h2 span{
     color: #ff004f;
     text-decoration: none;
     font-size: 18px;
-    line-height: 50px;
-    background: #fff;
-    width: 50px;
-    height: 50px;
+    line-height: 0px;
+    
     border-radius: 50%;
     text-align: center;
 }
@@ -497,7 +495,7 @@ nav .fa-solid{
         height: 100vh;
         background: #080808;
     }
-    
+
     .header-text{
         margin-top: 40px;
         font-size: 16px;
@@ -505,7 +503,7 @@ nav .fa-solid{
     }
     
     #about{
-        margin-top: 350px;
+        margin-top: 0px;
         padding: 0 0 0 0 ;
     }
     .header-text h1{
@@ -546,7 +544,7 @@ nav .fa-solid{
         margin-bottom: 30px;
     }
     .header{
-        display: inline;
+        display: inline-block;
     }
     .header h1{
         font-size: 20px;
@@ -558,8 +556,8 @@ nav .fa-solid{
     }
     .header .header-text2 {
         
-        margin-left: 23px;
-        margin-top: 10%;
+        margin-left: 50px;
+        margin-top: 20%;
     }
     
     
